body_main | logos | main_BG

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <!-- <div class="delimited d-none d-sm-block"> -->
         <section>
             <div class="mainPage">
+               
                 <div class="row">
                     <div class="col-6">
                         <div class="col-12">
@@ -100,6 +101,7 @@
                     </div>
                     <div class="col-6">
                         <img class="mainPageIMG" src="./assets/img/body/games.png">
+                        <div class="mainBG_game"></div>
                     </div>
                 </div>
             </div>
