--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light hearder_borderTop">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/header/logo.png">
+                <img class="logoHeaderJam" src="./assets/img/header/logo.png">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
